# shuttle-notation-python

./: README.md  information_parsing.py  pyproject.toml  python-package.yml  release_1_requirements.md  section_parsing.py  test.sh  util.py
.github/workflows/: python-package.yml
shuttle-notation/: __init__.py  full_parse.py
shuttle-notation/tests/: information_parsing_test.py  section_parsing_test.py  util_test.py
shuttle_notation/: __init__.py  information_parsing.py  section_parsing.py  util.py
shuttle_notation/parsing/: cursor.py  element.py  examples.py  full_parse.py  information_parsing.py  livetest_debug.py  section_parsing.py  util.py
shuttle_notation/tests/: full_parse_test.py  information_parsing_test.py  util_test.py
