[project]
name = "shuttle_notation"
version = "1.0"
description = "Python implementation of the Shuttle Notation standard."
readme = "README.md"
authors = [{ name = "Emil Strandvik" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.4"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = []
